Made bootstrap's navigation pills collapse. Issue #197.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,7 +53,10 @@ $colHover2: #eeeeee;
 
 .navbar-default {
   background-color: $bgDefault;
-  border-color: $bgHighlight;
+  border-style: none;
+  border: 0px;
+  //border-color: $bgDefault;//$bgHighlight;
+  margin-bottom: 0px;
 
   .navbar-brand {
     height: 100px;
@@ -89,6 +92,7 @@ $colHover2: #eeeeee;
   .navbar-nav {
     > li {
       > a {
+
         color: $colHover2;
         &:hover, &:focus {
           color: $colHover;
@@ -127,6 +131,11 @@ $colHover2: #eeeeee;
       }
     }
   }
+}
+
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+  border-style: none;
 }
 
 a:hover {
